# ata

./: .gitignore  Cargo.toml  README.md
.github/workflows/: Test.yml
src/: chat.rs  main.rs  tts.rs
tests/: chat.rs  cli.rs  tts.rs
tests/common/: mod.rs
