[package]
name = "ata"
version = "3.0.0"
edition = "2021"
authors = ["Rik Huijzer"]
license = "MIT"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
transformrs = "0.5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1"
