[package]
name = "ata"
version = "3.0.0"
edition = "2021"
authors = ["Rik Huijzer"]
license = "MIT"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
transformrs = { git = "https://github.com/rikhuijzer/transformrs.git", rev = "06b759f" }
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
tempfile = "3"
toml = "0.8"
